--- a/aem-demo/components/home/hero.html
+++ b/aem-demo/components/home/hero.html
@@ -5,17 +5,7 @@
     </h1>
   </div>
 
-  <div class="hero__banner">
-    <div class="hero__badge">
-      <span class="hero__badge-label">NEW</span>
-      <span class="hero__badge-main">
-        10% Off Your<br />
-        First Order
-      </span>
-      <span class="hero__badge-footer">SPECIAL</span>
-    </div>
-
-    <img
+   <img
       src="./aem-demo/assets/img/hero-main.jpg"
       alt="Pink flower hero banner"
       class="hero__image"
@@ -27,6 +17,6 @@
     <p class="hero__description">
       We’re Our Blooms<sup>®</sup> and we’re here to help you find your floral story.
     </p>
-    <button class="hero__cta">ABOUT US</button>
+    <button id="shop-now-cta" class="hero__cta">ABOUT US</button>
   </div>
 </section>
