--- a/aem-demo/templates/footer.html
+++ b/aem-demo/templates/footer.html
@@ -1,7 +1,7 @@
 <section class="footer-banner">
   <div class="footer-banner__image-wrapper">
     <img
-      src="../assets/img/footer.jpg"
+      src="./aem-demo/assets/img/footer.jpg"
       alt="Footer floral banner"
       class="footer-banner__image"
     />
