--- a/aem-demo/templates/header.html
+++ b/aem-demo/templates/header.html
@@ -1,5 +1,7 @@
 <nav class="ob-nav">
-  <div class="ob-nav__logo">Our Blooms®</div>
+  <a href="./index.html">
+    <div class="ob-nav__logo">Our Blooms®</div>
+  </a>
 
   <ul class="ob-nav__links">
     <li><a href="./index.html">Home</a></li>
@@ -7,5 +9,6 @@
     <li><a href="./about.html">About</a></li>
   </ul>
 
-  <button class="ob-nav__cta">Shop now</button>
+  <button class="ob-nav__cta" id="shop-now-cta">Shop now</button>
 </nav>
+
