--- a/aem-demo/components/home/services.html
+++ b/aem-demo/components/home/services.html
@@ -82,7 +82,7 @@
       Discover how we can add a touch of natural beauty to your next event.
     </p>
 
-    <button class="services__cta">
+    <button id="shop-now-cta" class="services__cta">
       • ABOUT US
     </button>
   </div>
